--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/stdpar/nways_stdpar.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/stdpar/nways_stdpar.ipynb
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, lets start modifying the original code and add stdpar. From the top menu, click on *File*, and *Open* `rdf.cpp` and `dcdread.h` from the current directory at `C/source_code/stdpar` directory. Remember to **SAVE** your code after changes, before running below cells."
+    "Now, lets start modifying the original code and add stdpar. Click on the <b>[rdf.cpp](../../source_code/stdpar/rdf.cpp)</b> and <b>[dcdread.h](../../source_code/stdpar/dcdread.h)</b> links, and modify `rdf.cpp` and `dcdread.h`. Remember to **SAVE** your code after changes, before running below cells."
    ]
   },
   {
@@ -381,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
