--- a/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab3.ipynb
+++ b/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab3.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "Now, add `collapse` clause to the code and make necessary changes to the loop directives. Once done, save the file, re-compile via `make`, and profile it again. \n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `miniWeather_openacc.cpp` and `Makefile` from the current directory at `C/source_code/lab3` directory. Remember to **SAVE** your code after changes, before running below cells."
+    "Click on the <b>[miniWeather_openacc.cpp](../source_code/lab3/miniWeather_openacc.cpp)</b> and <b>[Makefile](../source_code/lab3/Makefile)</b> links and modify `miniWeather_openacc.cpp` and `Makefile`. Remember to **SAVE** your code after changes, before running below cells."
    ]
   },
   {
@@ -241,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
