--- a/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab5.ipynb
+++ b/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab5.ipynb
@@ -240,7 +240,7 @@
     "\n",
     "We previously discussed the Amdahl's law in the first exercise. It is very important to understand the relation between the problem size and computational performance as this can determine the amount of speedup and benefit you would get by parallelizing on GPU. Due to the small problem size (`nx_glob`, `nz_glob` , and `sim_time` in this example), most of the computation is dominated by the initialization and there is not enough work/computation to make it suitable for GPU. Let's change the value of `nx_glob`, `nz_glob` , and `sim_time` in the code to `nx_glob` = 400 , `nz_glob`= 200 , and `sim_time`= 10. \n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `miniWeather_openacc.f90` from the current directory at `Fortran/source_code/lab5` directory. Remember to **SAVE** your code after changes, before running below cells.\n",
+    "Click on the <b>[miniWeather_openacc.f90](../source_code/lab5/miniWeather_openacc.f90)</b> link and modify `miniWeather_openacc.f90`. Remember to **SAVE** your code after changes, before running below cells.\n",
     "\n",
     "One done, **Compile** and **Profile** the application again with Nsight Compute CLI (`nv-nsight-cu-cli`)."
    ]
@@ -360,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
