--- a/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/numba/serial_RDF.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/numba/serial_RDF.ipynb
@@ -283,8 +283,8 @@
     "                main()\n",
     "    ```\n",
     "2. **Now, lets start modifying the original code to Numba code constructs.**\n",
-    "> From the top menu, click on File, and Open **nways_serial.py** from the current directory at **Python/source_code/numba** directory. Remember to SAVE your code after changes, and then run the cell below. \n",
-    "> Hints: focus on the **pair_gpu** function and you may need to modify few lines in the **main** function as well."
+    "> Click on the <b>[Modify](../../source_code/serial/nways_serial.py)</b>  link, and modify **nways_serial.py** to `Numba code construct`. Remember to SAVE your code after changes, and then run the cell below. \n",
+    "> Hints: focus on the **pair_gpu** function and you may need to modify few lines in the **main** function as well.\n"
    ]
   },
   {
