Fixed REview Comments for Multi GPU HPC NWays

--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/advanced_concepts/single_node_topology.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/advanced_concepts/single_node_topology.ipynb
@@ -2,26 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "251d3000",
-   "metadata": {},
-   "source": [
-    "Before we begin, let's get an overview of the CUDA driver version and the GPUs running on the server by executing the `nvidia-smi` command below. Highlight the cell below by clicking on it and then either hit `Ctrl+Enter` on the keyboard or click on the `Run` button on the toolbar above. The output will be visible below the cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6fa8e78",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!nvidia-smi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "790904cd",
    "metadata": {},
    "source": [
@@ -60,11 +40,11 @@
     "\n",
     "![open_terminal_session](../../images/open_terminal_session.png)\n",
     "\n",
-    "On our DGX-1 system, the output is as follows:\n",
+    "On a DGX-1 system, the output is as follows:\n",
     "\n",
     "![nvidia_smi_topo_output](../../images/nvidia_smi_topo_output.png)\n",
     "\n",
-    "Focus one a particular row, say GPU 0. The output states that GPUs 1 through 4 are connected to it via NVLink (in addition to PCIe) and GPUs 5 through 7 are connected to it via PCIe as well as an \"SMP\" interconnect. We have a dual-socket system and the CPUs in these sockets are connected by an interconnect known as SMP interconnect.\n",
+    "Focus on a particular row, say GPU 0. The output states that GPUs 1 through 4 are connected to it via NVLink (in addition to PCIe) and GPUs 5 through 7 are connected to it via PCIe as well as an \"SMP\" interconnect. We have a dual-socket system and the CPUs in these sockets are connected by an interconnect known as SMP interconnect.\n",
     "\n",
     "Thus, GPU 0 to GPU 5 communication happens via not just PCIe, but also over the inter-socket interconnect within the same node. Clearly, this is a longer path than say the one between GPU 0 and GPU 1, which are connected via NVLink directly. We will discuss the NIC to GPU connection in the inter-node section of this bootcamp.\n",
     "\n",
@@ -228,7 +208,7 @@
     "\n",
     "Here's a link to the home notebook through which all other notebooks are accessible:\n",
     "\n",
-    "# [HOME](../../../introduction.ipynb)\n",
+    "# [HOME](../../../start_here.ipynb)\n",
     "\n",
     "---\n",
     "## Links and Resources\n",
@@ -264,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
