--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/memcpy.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/memcpy.ipynb
@@ -2,24 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dd0ae66a",
-   "metadata": {},
-   "source": [
-    "Before we begin, let's get an overview of the CUDA driver version and the GPUs running on the server by executing the `nvidia-smi` command below. Highlight the cell below by clicking on it and then either hit `Ctrl+Enter` on the keyboard or click on the `Run` button on the toolbar above. The output will be visible below the cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7d483e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!nvidia-smi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e4ddba18",
    "metadata": {},
    "source": [
@@ -38,7 +20,7 @@
     "Before we begin, we define two important terms:\n",
     "\n",
     "* **Latency:** The amount of time it takes to take a unit of data from point A to point B. For example, if 4B of data can be transferred from point A to B in 4 $\\mu$s, that is the latency of transfer.\n",
-    "* **Bandwidth:** The amount of data that can be transferred from point A to point B in a unit of time. For example, if the width of the bus is 64KiB and latency of transfer between point A and B is 4 $\\mu$s, the bandwidth is 64KiB * (1/4$\\mu$s) = 1.6 GiB/s.\n",
+    "* **Bandwidth:** The amount of data that can be transferred from point A to point B in a unit of time. For example, if the width of the bus is 64KB and latency of transfer between point A and B is 4 $\\mu$s, the bandwidth is 64KB * (1/4$\\mu$s) = 1.6 GB/s.\n",
     "\n",
     "To parallelize our application to multi-GPUs, we first review the different methods of domain decomposition available to us for splitting the data among the GPUs, thereby distributing the work. Broadly, we can divide data into either stripes or tiles.\n",
     "\n",
@@ -78,7 +60,7 @@
    "id": "62d045bd",
    "metadata": {},
    "source": [
-    "The command should output more than one GPU. Inside a program, the number of GPU in the node can be obtained using the `cudaGetDeviceCount(int *count)` function and to perform any task, like running a CUDA kernel, copy operation, etc. on a particular GPU, we use the `cudaSetDevice(int device)` function.\n",
+    "`nvidia-smi` utility shows the available GPU on a node, but inside a CUDA program, the number of GPU in the node can be obtained using the `cudaGetDeviceCount(int *count)` function. To perform any task, like running a CUDA kernel, copy operation, etc. on a particular GPU, we use the `cudaSetDevice(int device)` function.\n",
     "\n",
     "### Copying between GPUs\n",
     "\n",
@@ -109,7 +91,7 @@
     "} // Serializes operations with respect to the host\n",
     "```\n",
     "\n",
-    "As this code results in serialized execution:\n",
+    "This code results in serialized execution as shown in diagram below:\n",
     "\n",
     "![memcpy_serialized](../../images/memcpy_serialized.png)\n",
     "\n",
@@ -160,7 +142,7 @@
     "2. Asynchronously copy GPU-local L2 norm back to CPU and implement top and bottom halo exchanges.\n",
     "3. Synchronize the devices at the end of each iteration using `cudaDeviceSynchronize` function.\n",
     "\n",
-    "Review the topic above on Asynchronous Operations if in doubt. Recall the utility of using separate `for` loops for launching device kernels and initiating copy operations.\n",
+    "Review the topic above on Asynchronous Operations if in doubt. We will be using separate `for` loops for launching device kernels and initiating copy operations.\n",
     "\n",
     "After implementing these, let's compile the code:"
    ]
@@ -227,7 +209,7 @@
    "id": "c4ac727d",
    "metadata": {},
    "source": [
-    "In the profiler timeline, the first few seconds denote the single-GPU code running on one of the GPUs. This version is executed so we can compare the multi-GPU version with it and we have already analyzed it. Let's analyze the multi-GPU timeline.\n",
+    "[Download the profiler report here for visualization](../../source_code/cuda/jacobi_memcpy_report.qdrep). In the profiler timeline, the first few seconds denote the single-GPU code running on one of the GPUs. This version is executed so we can compare the multi-GPU version with it. Let's analyze the multi-GPU timeline.\n",
     "\n",
     "![jacobi_memcpy_report_overview](../../images/jacobi_memcpy_report_overview.png)\n",
     "\n",
@@ -385,6 +367,7 @@
    "id": "4b801eb0",
    "metadata": {},
    "source": [
+    "[Download the profiler report here for visualization](../../source_code/cuda/jacobi_memcpy_p2p_report.qdrep).\n",
     "The output we obtain is shared below:\n",
     "\n",
     "![jacobi_memcpy_p2p_report](../../images/jacobi_memcpy_p2p_report.png)\n",
@@ -399,7 +382,7 @@
     "\n",
     "Here's a link to the home notebook through which all other notebooks are accessible:\n",
     "\n",
-    "# [HOME](../../../introduction.ipynb)\n",
+    "# [HOME](../../../start_here.ipynb)\n",
     "\n",
     "---\n",
     "\n",
@@ -437,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
