--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/streams.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/streams.ipynb
@@ -2,24 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "18638d64",
-   "metadata": {},
-   "source": [
-    "Before we begin, let's get an overview of the CUDA driver version and the GPUs running on the server by executing the `nvidia-smi` command below. Highlight the cell below by clicking on it and then either hit `Ctrl+Enter` on the keyboard or click on the `Run` button on the toolbar above. The output will be visible below the cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ddeeccc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!nvidia-smi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a7c63ff6",
    "metadata": {},
    "source": [
@@ -27,7 +9,7 @@
     "\n",
     "We will learn about the following in this lab:\n",
     "\n",
-    "* Concept of overlapping computation withEventEvent communication\n",
+    "* Concept of overlapping computation with Memory transfer\n",
     "* CUDA Streams overview and implementation\n",
     "* CUDA Events overview and implementation\n",
     "* Synchronization primitives in CUDA for the whole device, stream, event, etc.\n",
@@ -192,7 +174,7 @@
    "id": "a6f5bf5e",
    "metadata": {},
    "source": [
-    "Open the report in GUI and measure the total time between two Jacobi iterations as shown below.\n",
+    "[Download the report here](../../source_code/cuda/jacobi_streams_p2p_report.qdrep) and open the report in GUI and measure the total time between two Jacobi iterations as shown below.\n",
     "\n",
     "![streams_util_selection](../../images/streams_util_selection.png)\n",
     "\n",
@@ -339,7 +321,7 @@
    "id": "0e330889-77e3-4fe3-9782-b4a13425c9bb",
    "metadata": {},
    "source": [
-    "Download the `.qdrep` report file and open it in the Nsight Systems GUI application:\n",
+    "[Download the .qdrep report file](../../source_code/cuda/jacobi_streams_events_p2p_report.qdrep) and open it in the Nsight Systems GUI application:\n",
     "\n",
     "![jacobi_memcpy_streams_events_p2p_report](../../images/jacobi_memcpy_streams_events_p2p_report.png)\n",
     "\n",
@@ -355,7 +337,7 @@
     "\n",
     "Here's a link to the home notebook through which all other notebooks are accessible:\n",
     "\n",
-    "# [HOME](../../../introduction.ipynb)\n",
+    "# [HOME](../../../start_here.ipynb)\n",
     "\n",
     "---\n",
     "## Links and Resources\n",
@@ -393,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
