--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/cuda_aware.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/cuda_aware.ipynb
@@ -2,28 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "da592767",
-   "metadata": {},
-   "source": [
-    "Before we begin, let's get an overview of the CUDA driver version and the GPUs running on the server by executing the `nvidia-smi` command below. Highlight the cell below by clicking on it and then either hit `Ctrl+Enter` on the keyboard or click on the `Run` button on the toolbar above. The output will be visible below the cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b23b406",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!nvidia-smi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a89881ae",
    "metadata": {},
    "source": [
-    "**Note:** Execution results can vary significantly based on the MPI installation, supporting libraries, workload manager, and underlying CPU and GPU hardware configuration and topology. The codes in this lab have been tested on DGX-1 8 Tesla V100 16 GB nodes connected by Mellanox InfiniBand NICs running OpenMPI v4.1.1 with HPCX 2.8.1 and CUDA v11.3.0.0.\n",
     "\n",
     "# Learning Objectives\n",
     "\n",
@@ -32,6 +13,8 @@
     "* CUDA-aware MPI concepts and APIs.\n",
     "* Impact of fine-tuning CUDA-aware MPI on application performance.\n",
     "* Underlying GPUDirect technologies like P2P and RDMA.\n",
+    "\n",
+    "**Note:** Execution results can vary significantly based on the MPI installation, supporting libraries, workload manager, and underlying CPU and GPU hardware configuration and topology. The codes in this lab have been tested on DGX-1 8 Tesla V100 16 GB nodes connected by Mellanox InfiniBand NICs running OpenMPI v4.1.1 with HPCX 2.8.1 and CUDA v11.3.0.0.\n",
     "\n",
     "# Improving Application Performance\n",
     "\n",
@@ -186,7 +169,7 @@
     "\n",
     "Moreover, we are not interested in profiling the single GPU version as profiling it increases both profiling time and the `.qdrep` file size. So, we will skip running the single-GPU version by passing the `-skip_single_gpu` flag to binary. Note that we will not get the speedup and efficiency numbers.\n",
     "\n",
-    "That isn't a problem, however. As NVTX statistics provide the runtime for our multi-GPU Jacobi loop as well as the time taken for halo exchange, we can use them for comparison.\n",
+    "That isn't a problem, however as NVTX statistics provide the runtime for our multi-GPU Jacobi loop as well as the time taken for halo exchange, we can use them for comparison.\n",
     "\n",
     "Now, let us profile only the multi-GPU version for the baseline 1K iterations:\n",
     "\n"
@@ -337,7 +320,7 @@
     "\n",
     "Here's a link to the home notebook through which all other notebooks are accessible:\n",
     "\n",
-    "# [HOME](../../../introduction.ipynb)\n",
+    "# [HOME](../../../start_here.ipynb)\n",
     "\n",
     "---\n",
     "## Links and Resources\n",
@@ -374,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
