--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/memcpy.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/memcpy.ipynb
@@ -2,28 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4ecc207b-52c7-463a-8731-19203d384a30",
-   "metadata": {},
-   "source": [
-    "Before we begin, let's get an overview of the CUDA driver version and the GPUs running on the server by executing the `nvidia-smi` command below. Highlight the cell below by clicking on it and then either hit `Ctrl+Enter` on the keyboard or click on the `Run` button on the toolbar above. The output will be visible below the cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d6d1387-f525-40d4-bf3a-f7403bdce2b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!nvidia-smi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ed9d6f0d-cfa6-4ffd-b970-bee700bf1a90",
    "metadata": {},
    "source": [
-    "**Note:** Execution results can vary significantly based on the MPI installation, supporting libraries, workload manager, and underlying CPU and GPU hardware configuration and topology. The codes in this lab have been tested on DGX-1 8 Tesla V100 16 GB nodes connected by Mellanox InfiniBand NICs running OpenMPI v4.1.1 with HPCX 2.8.1 and CUDA v11.3.0.0.\n",
     "\n",
     "# Learning Objectives\n",
     "\n",
@@ -32,6 +13,8 @@
     "* Point-to-point and collective MPI communication routines.\n",
     "* Managing the two-level hierarchy created by global and local rank of a process and how it accesses GPU(s).\n",
     "* OpenMPI process mappings and its effect on application performance.\n",
+    "\n",
+    "**Note:** Execution results can vary significantly based on the MPI installation, supporting libraries, workload manager, and underlying CPU and GPU hardware configuration and topology. The codes in this lab have been tested on DGX-1 8 Tesla V100 16 GB nodes connected by Mellanox InfiniBand NICs running OpenMPI v4.1.1 with HPCX 2.8.1 and CUDA v11.3.0.0.\n",
     "\n",
     "## MPI Inter-Process Communication\n",
     "\n",
@@ -117,7 +100,7 @@
     "\n",
     "### Nodel-Level Local Rank\n",
     "\n",
-    "As we will run on multiple nodes, for example 2, the number of processes launched, 16, will not map one-to-one with GPU Device ID, which runs from 0 to 7 on each node. Thus, we need to create a local rank at the node level.\n",
+    "As we will run on multiple nodes, for example 2 nodes, the number of processes launched will be 16 ( assuming 8 GPU per node like in DGX). This requires addional mapping of process id to GPU Device ID, which runs from 0 to 7 on each node. Thus, we need to create a local rank at the node level.\n",
     "\n",
     "To achieve this, we split the `MPI_COMM_WORLD` communicator between the nodes and store it in a `local_comm` communicator. Then, we get the local rank by calling the familiar `MPI_Comm_rank` function. Finally, we free the `local_comm` communicator as we don't require it anymore. \n",
     "\n",
@@ -356,7 +339,7 @@
    "id": "c89cc9bd-aed4-4ae4-bd5c-ae4698d44d92",
    "metadata": {},
    "source": [
-    "Download the report and view it via the GUI. \n",
+    "[Download the report](../../source_code/mpi/jacobi_memcpy_mpi_report.qdrep) and view it via the GUI. \n",
     "\n",
     "You may notice that only 8 MPI processes are visible even though we launched 16 MPI processes. Nsight Systems displays the output from a single node and inter-node transactions (copy operations) are visible. This is for ease of viewing and doesn't impede our analysis.\n",
     "\n",
@@ -386,7 +369,7 @@
     "\n",
     "Here's a link to the home notebook through which all other notebooks are accessible:\n",
     "\n",
-    "# [HOME](../../../introduction.ipynb)\n",
+    "# [HOME](../../../start_here.ipynb)\n",
     "\n",
     "---\n",
     "## Links and Resources\n",
@@ -422,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
