--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/nvshmem/nvshmem.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/nvshmem/nvshmem.ipynb
@@ -2,24 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4fe78e41-7a43-46ff-b6f8-60787bfaded6",
-   "metadata": {},
-   "source": [
-    "Before we begin, let's get an overview of the CUDA driver version and the GPUs running on the server by executing the `nvidia-smi` command below. Highlight the cell below by clicking on it and then either hit `Ctrl+Enter` on the keyboard or click on the `Run` button on the toolbar above. The output will be visible below the cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0a532a3-a19e-42d6-81c8-dfbf248604d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!nvidia-smi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b016bc32-95ed-4298-a475-0b2209ec8c1a",
    "metadata": {},
    "source": [
@@ -405,7 +387,7 @@
    "id": "19b62965-149a-43a3-9d12-d1919cbadefd",
    "metadata": {},
    "source": [
-    "Notice that most NVSHMEM calls are available in NVTX Push-Pop stats on the CLI output. Open `.qdrep` file in the GUI to view the Timeline:\n",
+    "Download the report from [here](../../source_code/nvshmem/jacobi_nvshmem_report.dqrep).Notice that most NVSHMEM calls are available in NVTX Push-Pop stats on the CLI output. Open `.qdrep` file in the GUI to view the Timeline:\n",
     "\n",
     "![nvshmem_profiler_report](../../images/nvshmem_profiler_report.png)\n",
     "\n",
@@ -417,7 +399,7 @@
     "\n",
     "Click link to the home notebook below through which all other notebooks are accessible:\n",
     "\n",
-    "# [HOME](../../../introduction.ipynb)\n",
+    "# [HOME](../../../start_here.ipynb)\n",
     "\n",
     "---\n",
     "## Links and Resources\n",
@@ -453,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
