--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/multi_node_intro.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/multi_node_intro.ipynb
@@ -2,24 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eb0fd5ff",
-   "metadata": {},
-   "source": [
-    "Before we begin, let's get an overview of the CUDA driver version and the GPUs running on the server by executing the `nvidia-smi` command below. Highlight the cell below by clicking on it and then either hit `Ctrl+Enter` on the keyboard or click on the `Run` button on the toolbar above. The output will be visible below the cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa6710a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!nvidia-smi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "403d97bc",
    "metadata": {},
    "source": [
@@ -28,7 +10,7 @@
     "In this lab we will learn about:\n",
     "\n",
     "* Multi-node Multi-GPU programming and importance of inter-process communication frameworks.\n",
-    "* Introduction MPI specification and APIs.\n",
+    "* Introduction to MPI specification and APIs.\n",
     "* Execution of Hello World MPI binary on single as well as multiple nodes.\n",
     "\n",
     "# Multi-Node Multi-GPU Programming\n",
@@ -37,7 +19,7 @@
     "\n",
     "A single process can spawn threads that can be spread within a node (potentially on multiple sockets) but it cannot cross the node boundary. Thus, scalable multi-node programming requires the use of multiple processes.\n",
     "\n",
-    "Inter-process communication is usually done by libraries like Open MPI. They expose communication APIs, synchronization constructs, etc. to the user. Let us now learn about programming in MPI.\n",
+    "Inter-process communication is usually done by libraries like OpenMPI. They expose communication APIs, synchronization constructs, etc. to the user. Let us now learn about programming in MPI.\n",
     "\n",
     "## MPI\n",
     "\n",
@@ -210,7 +192,7 @@
     "Hello world from processor <node_0_name>, rank 2 out of 4 processors\n",
     "```\n",
     "\n",
-    "**Note:** Promptly request help if you face difficulty at any step. Subsequent labs will assume the reader understands how to run a multi-node MPI job.\n",
+    "**Note:** Subsequent labs will assume the reader understands how to run a multi-node MPI job.\n",
     "\n",
     "Now, let us learn more MPI concepts and code a CUDA Memcpy and MPI-based Jacobi solver. Click below to move to the next lab:\n",
     "\n",
@@ -218,7 +200,7 @@
     "\n",
     "Here's a link to the home notebook through which all other notebooks are accessible:\n",
     "\n",
-    "# [HOME](../../../introduction.ipynb)\n",
+    "# [HOME](../../../start_here.ipynb)\n",
     "\n",
     "---\n",
     "## Links and Resources\n",
@@ -254,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
